--- a/Starting website 2/index.html
+++ b/Starting website 2/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="agence design lyon, agence web design, agence web, web design">
-    <meta name="description" content="">
+    <meta name="description" content="L'agence La Panthère est une excellente agence de web design qui aide votre entrepirses à devenir attractives et visibles sur Internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
