--- a/Starting website 2/index.html
+++ b/Starting website 2/index.html
@@ -86,7 +86,7 @@
 				<h3 class="mg-md text-center">
 					Web design
 				</h3>
-				<p class="text-center" style="font-size: 18px;">
+				<p class="text-center" style="font-size: 20px;">
 					Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
@@ -97,7 +97,7 @@
 				<h3 class="mg-md text-center">
 					Stratégie
 				</h3>
-				<p class="text-center" style="font-size: 18px;">
+				<p class="text-center" style="font-size: 20px;">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 				</p>
 			</div>
@@ -108,15 +108,17 @@
 				<h3 class="mg-md text-center">
 					Illustrations
 				</h3>
-				<p class="text-center" style="font-size: 18px;">
+				<p class="text-center" style="font-size: 20px;">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
 			</div>
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+				<cite style="font-size: 25px;">
+					"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.
+					Cela nous aidé à doubler nos ventes en ligne à Lyon." <br>Maxime Guibard, PDG de À vos fourchettes
+				</cite>
 			</div>
 		</div>
 	</div>
