--- a/Starting website 2/page2.html
+++ b/Starting website 2/page2.html
@@ -71,7 +71,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas. Désolé pour le dérangement!">
 					<div class="form-group">
 						<label>
 							Nom
