--- a/Starting website 2/page2.html
+++ b/Starting website 2/page2.html
@@ -71,7 +71,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas. Désolé pour le dérangement!">
+				<form style="font-size: 18px;" id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas. Désolé pour le dérangement!">
 					<div class="form-group">
 						<label>
 							Nom
@@ -88,7 +88,7 @@
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input id="name" class="form-control" required />
 					</div>
 					<div class="form-group">
 						<label>
