text size contact and footer 2, scrolltop

--- a/Starting website 2/index.html
+++ b/Starting website 2/index.html
@@ -257,6 +257,10 @@
 </div>
 <!-- Footer - bloc-8 END -->
 
+<!-- ScrollToTop Button -->
+<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up" style="color: white;"></span></a>
+<!-- ScrollToTop Button END-->
+
 </div>
 <!-- Principal conteneur END -->
 
