color text header 2, portfolio center

--- a/Starting website 2/index.html
+++ b/Starting website 2/index.html
@@ -155,8 +155,8 @@
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+			<div class="col-sm-6" style="margin-bottom: 50px;">
+				<a href="#" style="display: flex; align-items: center; justify-content: center;" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
 					<img src="img/1.jpg"  class="img-responsive portfolio-thumb" alt="Refonte site web d'un journal"/>
 				</a>
 				<h3 class="mg-md text-center">
@@ -167,7 +167,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+				<a href="#" style="display: flex; align-items: center; justify-content: center;" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
 					<img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" />
 				</a>
 				<h3 class="mg-md text-center">
@@ -179,8 +179,8 @@
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+			<div class="col-sm-6" style="margin-bottom: 50px;">
+				<a href="#" style="display: flex; align-items: center; justify-content: center;" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
 					<img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour un voyageur"/>
 				</a>
 				<h3 class="mg-md text-center">
@@ -191,7 +191,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+				<a href="#" style="display: flex; align-items: center; justify-content: center;" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
 					<img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour une agence de mariage" />
 				</a>
 				<h3 class="mg-md text-center">
