--- a/Starting website 2/page2.html
+++ b/Starting website 2/page2.html
@@ -88,7 +88,7 @@
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input id="name" class="form-control" required />
+						<input id="message" class="form-control" required />
 					</div>
 					<div class="form-group">
 						<label>
