--- a/Starting website 2/page2.html
+++ b/Starting website 2/page2.html
@@ -71,7 +71,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form style="font-size: 18px;" id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas. Désolé pour le dérangement!">
+				<form style="font-size: 18px;" id="form_1" novalidate data-success-msg="Votre message a été envoyé." data-fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas. Désolé pour le dérangement!">
 					<div class="form-group">
 						<label>
 							Nom
@@ -88,12 +88,13 @@
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input id="message" class="form-control" required />
+						<input id="text" class="form-control" required />
 					</div>
 					<div class="form-group">
 						<label>
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						</label>
+						<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
