--- a/Starting website 2/index.html
+++ b/Starting website 2/index.html
@@ -9,6 +9,7 @@
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="seo.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
@@ -86,7 +87,7 @@
 				<h3 class="mg-md text-center">
 					Web design
 				</h3>
-				<p class="text-center" style="font-size: 20px;">
+				<p class="text-center size20">
 					Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
