--- a/Starting website 2/index.html
+++ b/Starting website 2/index.html
@@ -134,7 +134,7 @@
 				<h2 class="mg-md text-center tc-white">
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h2>
-				<p class="text-center white" style="font-size: 22px;">
+				<p class="text-center white size22">
 					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. 
 					Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br>
 					<a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
@@ -156,38 +156,38 @@
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6" style="margin-bottom: 50px;">
-				<a href="#" style="display: flex; align-items: center; justify-content: center;" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+			<div class="col-sm-6 marg-bott">
+				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
 					<img src="img/1.jpg"  class="img-responsive portfolio-thumb" alt="Refonte site web d'un journal"/>
 				</a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
-				<p class="text-center" style="font-size: 18px;">
+				<p class="text-center size18">
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" style="display: flex; align-items: center; justify-content: center;" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
 					<img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" />
 				</a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
-				<p class="text-center" style="font-size: 18px;">
+				<p class="text-center size18">
 					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 				</p>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6" style="margin-bottom: 50px;">
+			<div class="col-sm-6 marg-bott">
 				<a href="#" style="display: flex; align-items: center; justify-content: center;" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
 					<img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour un voyageur"/>
 				</a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
-				<p class="text-center" style="font-size: 18px;">
+				<p class="text-center size18">
 					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 				</p>
 			</div>
@@ -198,7 +198,7 @@
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
-				<p class="text-center" style="font-size: 18px;">
+				<p class="text-center size18">
 					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 				</p>
 			</div>
