--- a/Starting website 2/index.html
+++ b/Starting website 2/index.html
@@ -157,7 +157,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6 marg-bott">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+				<a href="#" style="display: flex; align-items: center; justify-content: center;" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
 					<img src="img/1.jpg"  class="img-responsive portfolio-thumb" alt="Refonte site web d'un journal"/>
 				</a>
 				<h3 class="mg-md text-center">
@@ -168,7 +168,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+				<a href="#" style="display: flex; align-items: center; justify-content: center;" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
 					<img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" />
 				</a>
 				<h3 class="mg-md text-center">
@@ -227,7 +227,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white" style="font-size: 20px;">
+				<p class="text-center white size20">
 					Agence La Panthère - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
