--- a/Starting website 2/page2.html
+++ b/Starting website 2/page2.html
@@ -9,6 +9,7 @@
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="seo.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
@@ -56,7 +57,7 @@
 				<h1 class="text-center hero-bloc-text white">
 					Parlons web design !
 				</h1>
-				<p class="text-center mg-lg tight-width-whitespace white" style="font-size: 18px;">
+				<p class="text-center mg-lg tight-width-whitespace white size18">
 					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 				</p>
@@ -71,7 +72,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form style="font-size: 18px;" id="form_1" novalidate data-success-msg="Votre message a été envoyé." data-fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas. Désolé pour le dérangement.">
+				<form class="size18" id="form_1" novalidate data-success-msg="Votre message a été envoyé." data-fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas. Désolé pour le dérangement.">
 					<div class="form-group">
 						<label>
 							Nom
@@ -102,7 +103,7 @@
 				</form>
 			</div>
 			<div class="col-sm-6">
-				<p style="font-size: 18px;">
+				<p class="size18">
 					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
 			</div>
@@ -116,7 +117,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white" style="font-size: 20px;">
+				<p class="text-center white size20">
 					Agence La Panthère - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
