--- a/Starting website 2/index.html
+++ b/Starting website 2/index.html
@@ -259,7 +259,7 @@
 <!-- Footer - bloc-8 END -->
 
 <!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up" style="color: white;"></span></a>
+<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up white"></span></a>
 <!-- ScrollToTop Button END-->
 
 </div>
